# onyx2moodle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
src/onyx2moodle/: __init__.py  classifier.py  cli.py  emitter.py  parser.py  qa.py  unpack.py
src/onyx2moodle/render/: __init__.py  templates.py
src/onyx2moodle/templates/: input.xml  prt_node.xml  prt_wrapper.xml  qtest.xml  question_shell.xml
src/onyx2moodle/translate/: __init__.py  cloze.py  common.py  essay.py  matching.py  multichoice.py  shortanswer.py  stack.py
tests/: test_classifier.py  test_e2e_matching_cloze.py  test_e2e_stack.py  test_parser.py  test_qa_stack_lint.py  test_unpack.py
