[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onyx2moodle"
version = "0.1.0"
description = "Convert ONYX QTI 2.1 question exports (OPAL/BPS) to Moodle XML, including qtype_stack for Maxima-graded items."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Patrick Melix" }]
keywords = ["moodle", "onyx", "opal", "qti", "stack", "maxima", "question-bank"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Education",
]
dependencies = [
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
onyx2moodle = "onyx2moodle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onyx2moodle = ["templates/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
